--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
                 <div class="col3">
                     <ul>
-                        <li>Web Designing</li>
+                        <li>Web Developer</li>
                         <li> Programming in C , C++ and Java</li>
                         <li> Microsoft Office  <br><br></li>
                     </ul>
